--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -226,6 +226,22 @@ jobs:
           
           staticcheck -checks="all,-S1000,-ST1000" ./...
 
+      - name: Download dependencies for linting
+        run: |
+          # Set up Go environment explicitly
+          export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
+          export GOCACHE="$HOME/.cache/go-build"
+          export GOPATH="$HOME/go"
+          export GOROOT="/usr/local/go"
+          export GOTMPDIR="$HOME/.cache/go-tmp"
+          export GOMODCACHE="$HOME/go/pkg/mod"
+          export GOSUMDB="sum.golang.org"
+          export GOPROXY="https://proxy.golang.org,direct"
+          export TMPDIR="$HOME/.cache"
+          
+          go mod download
+          go mod verify
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
